<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@drawable/rectangle_border">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_question_capacity_text"
            android:text="@string/dialog_question_capacity"
            android:textColor="@color/standardText"
            android:textSize="@dimen/standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radio_capacity_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_question_capacity_option_low" />
            <RadioButton android:id="@+id/radio_capacity_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_question_capacity_option_medium" />
            <RadioButton android:id="@+id/radio_capacity_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_question_capacity_option_high" />
        </RadioGroup>

        <include layout="@layout/dialog_question_buttons"/>
    </LinearLayout>
</ScrollView>