<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/startPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/standardTextOverBackground"
                android:hint="@string/connections_startingPoint"
                android:nextFocusUp="@id/startPoint"
                android:nextFocusLeft="@id/startPoint"/>

            <AutoCompleteTextView
                android:id="@+id/destinationPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/standardTextOverBackground"
                android:hint="@string/connections_destinationPoint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/date"
                android:textColor="@color/standardTextOverBackground"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/connections_date"/>

            <Button
                android:id="@+id/time"
                android:textColor="@color/standardTextOverBackground"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/connections_time" />
        </LinearLayout>

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#ffffff"
            android:text="@string/connections_search"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/connections_resultHeader"
            android:textSize="@dimen/header2"
            android:textColor="@color/standardText"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/resultlistview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>

</LinearLayout>