<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_question_interchange_text"
            android:text="@string/dialog_question_interchange"
            android:textColor="@color/standardText"
            android:textSize="@dimen/standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_interchange_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radio_interchange_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_question_interchange_option_yes" />
            <RadioButton android:id="@+id/radio_interchange_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_question_interchange_option_no" />
        </RadioGroup>

        <include layout="@layout/dialog_question_buttons"/>
    </LinearLayout>
</ScrollView>